--- a/index.html
+++ b/index.html
@@ -103,21 +103,21 @@
             <p>Los alojamientos de Argentina recibieron <strong>4.7 de 5 estrellas</strong> con más de <strong>1.000.000 de evaluaciones.</strong></p>
             <div class="acommodations">
                 <div class="first-acommodation">
-                    <img class="acommodation-img" src="/src/6.webp" alt="">
+                    <img class="acommodation-img" src="./src/6.webp" alt="">
                     <p class="acommodation-exp">Excelente ubicación en zona residencial céntrica, ambiente tranquilo, cerca de todos los servicios que se puedan requerir.</p>
                     <div id="first-tenant">
 
                     </div>
                 </div>
                 <div class="second-acommodation">
-                    <img class="acommodation-img" src="/src/7.webp" alt="">
+                    <img class="acommodation-img" src="./src/7.webp" alt="">
                     <p class="acommodation-exp">Cálido, luminoso departamento nuevo (2016), en la mejor parte de Palermo, zona muy segura y cómoda. Rodeado de restaurantes, bares y cafés.</p>
                     <div id="second-tenant">
                         
                     </div>
                 </div>
                 <div class="third-acommodation">
-                    <img class="acommodation-img" src="/src/8.webp" alt="">
+                    <img class="acommodation-img" src="./src/8.webp" alt="">
                     <p class="acommodation-exp">Muy lindo departamento con todo lo necesario para pasar una buena estadía. Fácil proceso de ingreso y salida. La ubicación es genial.</p>
                     <div id="third-tenant">
                         
