--- a/index.html
+++ b/index.html
@@ -103,22 +103,22 @@
             <p>Los alojamientos de Argentina recibieron <strong>4.7 de 5 estrellas</strong> con más de <strong>1.000.000 de evaluaciones.</strong></p>
             <div class="acommodations">
                 <div class="first-acommodation">
-                    <img class="acommodation-img" src="./src/6.webp" alt="">
-                    <p class="acommodation-exp">Excelente ubicación en zona residencial céntrica, ambiente tranquilo, cerca de todos los servicios que se puedan requerir.</p>
+                    <img class="acommodation-img" src="./src/fifth.png" alt="">
+                    <p class="acommodation-exp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos a quisquam modi velit consectetur doloremque quas recusandae praesentium aliquid perferendis!</p>
                     <div id="first-tenant">
 
                     </div>
                 </div>
                 <div class="second-acommodation">
-                    <img class="acommodation-img" src="./src/7.webp" alt="">
-                    <p class="acommodation-exp">Cálido, luminoso departamento nuevo (2016), en la mejor parte de Palermo, zona muy segura y cómoda. Rodeado de restaurantes, bares y cafés.</p>
+                    <img class="acommodation-img" src="./src/sixth.png" alt="">
+                    <p class="acommodation-exp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis modi adipisci deleniti dicta dignissimos rerum voluptatem aliquam ad itaque atque.</p>
                     <div id="second-tenant">
                         
                     </div>
                 </div>
                 <div class="third-acommodation">
-                    <img class="acommodation-img" src="./src/8.webp" alt="">
-                    <p class="acommodation-exp">Muy lindo departamento con todo lo necesario para pasar una buena estadía. Fácil proceso de ingreso y salida. La ubicación es genial.</p>
+                    <img class="acommodation-img" src="./src/eigth.png" alt="">
+                    <p class="acommodation-exp">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum aperiam magnam, porro explicabo assumenda cupiditate natus eos sint quidem. Quam.</p>
                     <div id="third-tenant">
                         
                     </div>
