--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                 <div class="header-right">
                     <nav>
                         <ul>
+                            <li class="li-special li-dis" style="display: none;"><a href="#">Conviertete en anfitrión</a></li>
+                            <li class="li-dis" style="display: none;"><a href="#">Ayuda</a></li>
                             <li><a href="#">Registrate</a></li>
                             <li><a href="#">Iniciar sesión</a></li>
                         </ul>
